--- a/config-data/customer-service.yaml
+++ b/config-data/customer-service.yaml
@@ -1,13 +1,28 @@
+server:
+  port: 0  # puerto aleatorio (cumple con "no asignación de puertos")
+
 spring:
   application:
     name: customer-service
 
-server:
-  port: 0
+  datasource:
+    url: jdbc:postgresql://${DB_HOST:localhost}:5432/customerms
+    username: postgres
+    password: "ambar2004"
+
+  jpa:
+    hibernate:
+      ddl-auto: update   # crea/actualiza tablas automáticamente
+    open-in-view: false
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
 
 eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
   instance:
-    prefer-ip-address: true
+    preferIpAddress: true
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://eureka-server-service:8761/eureka/
